# mir_client

Src/Client/: CMakeLists.txt  client.h
Src_1.57/: CMakeLists.txt
Src_1.57/Client/: CMakeLists.txt  client.cpp  main.cpp
Src_32/: CMakeLists.txt
Src_32/Client/: CMakeLists.txt  client.cpp  main.cpp
Src_32/Common/: CMakeLists.txt
libs/MySQL Connector C++ 1.1.2/lib/Win32/Debug/: mysqlcppconn.exp  mysqlcppconn.ilk  mysqlcppconn.lib
libs/MySQL Connector C++ 1.1.2/lib/Win32/Release/: mysqlcppconn.exp  mysqlcppconn.lib
libs/MySQL Connector C++ 1.1.2/lib/x64/: mysqlcppconn.lib
libs/MySQL Connector C++ 1.1.2/lib/x64/Debug/: mysqlcppconn.exp  mysqlcppconn.lib
libs/MySQL Connector C++ 1.1.2/lib/x64/Release/: mysqlcppconn.exp  mysqlcppconn.lib
libs/MySQL/include/x64/: my_config.h  mysql_version.h
libs/MySQL/lib/Win32/: libmysqld.lib  mysqlservices.lib
libs/MySQL/lib/x64/: libmysqld.lib  mysqlservices.lib
libs/XCrashHandler/include/: CrashOptions.h  FileSystemUtil.h  MiniVersion.cpp  MiniVersion.h  SEHTranslator.cpp  SEHTranslator.h  Screenshot.cpp  Screenshot.h  XCrashHandler.cpp  XCrashHandler.h  XCrashReport.ini  XGetWinVer.cpp  XGetWinVer.h
libs/ajson/include/: ajson.hpp
libs/json/lib/Win32/Debug/: json_libmtd.lib  json_vs11_libmdd.lib  json_vs12_libmdd.lib
libs/json/lib/Win32/Release/: json_libmt.lib  json_vs11_libmd.lib  json_vs12_libmd.lib
libs/json/lib/x64/Debug/: json_libmtd.lib  json_vs11_libmdd.lib  json_vs12_libmdd.lib
libs/json/lib/x64/Release/: json_libmt.lib  json_vs11_libmd.lib  json_vs12_libmd.lib
libs/redis-cplusplus-client/: test_client.cpp
libs/redis-cplusplus-client/include/: redisclient.h
libs/redis-cplusplus-client/lib/x64/Debug/: anet.lib
libs/redis-cplusplus-client/msvc/: redis_cpp_msvc.sln
libs/redis-cplusplus-client/msvc/Debug/: anet_win32.lib
libs/redis-cplusplus-client/msvc/Release/: anet_win32.lib
libs/redis-cplusplus-client/msvc/anet_win32/: anet_win32.vcxproj
libs/redis-cplusplus-client/msvc/redis_cpp_tests/: redis_cpp_tests.vcxproj
libs/redis-cplusplus-client/msvc/x64/Release/: anet_win32.lib
